// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Badge > matches snapshot (error) 1`] = `
<span
  class="ant-tag ant-tag-filled ant-tag-error BadgeTag-sc-1ky7gew-0 jhktSS css-dev-only-do-not-override-xogyor css-var-_r_3_"
>
  label
</span>
`;

exports[`Badge > matches snapshot (info) 1`] = `
<span
  class="ant-tag ant-tag-filled ant-tag-blue BadgeTag-sc-1ky7gew-0 jhktSS css-dev-only-do-not-override-xogyor css-var-_r_2_"
>
  label
</span>
`;

exports[`Badge > matches snapshot (muted) 1`] = `
<span
  class="ant-tag ant-tag-filled BadgeTag-sc-1ky7gew-0 eVqakK css-dev-only-do-not-override-xogyor css-var-_r_5_"
>
  label
</span>
`;

exports[`Badge > matches snapshot (neutral) 1`] = `
<span
  class="ant-tag ant-tag-filled ant-tag-default BadgeTag-sc-1ky7gew-0 jhktSS css-dev-only-do-not-override-xogyor css-var-_r_0_"
>
  label
</span>
`;

exports[`Badge > matches snapshot (note) 1`] = `
<span
  class="ant-tag ant-tag-filled BadgeTag-sc-1ky7gew-0 jtjROa css-dev-only-do-not-override-xogyor css-var-_r_6_"
>
  label
</span>
`;

exports[`Badge > matches snapshot (success) 1`] = `
<span
  class="ant-tag ant-tag-filled ant-tag-success BadgeTag-sc-1ky7gew-0 jhktSS css-dev-only-do-not-override-xogyor css-var-_r_1_"
>
  label
</span>
`;

exports[`Badge > matches snapshot (warning) 1`] = `
<span
  class="ant-tag ant-tag-filled ant-tag-warning BadgeTag-sc-1ky7gew-0 jhktSS css-dev-only-do-not-override-xogyor css-var-_r_4_"
>
  label
</span>
`;
